# steam-authenticator-linux

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  install.sh  pyproject.toml  requirements.txt  run.sh
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
packaging/appimage/: build-appimage.sh
packaging/arch/: PKGBUILD
packaging/deb/: control
packaging/desktop/: gg.cs2central.SteamAuthenticator.desktop
packaging/flatpak/: gg.cs2central.SteamAuthenticator.desktop  gg.cs2central.SteamAuthenticator.metainfo.xml  gg.cs2central.SteamAuthenticator.yml  requirements-flatpak.txt  steam-authenticator-wrapper.sh
packaging/flatpak/flathub/: gg.cs2central.SteamAuthenticator.yml
src/: account_linker.py  confirmations_dialog.py  login_dialog.py  mafile_manager.py  main.py  preferences.py  sda_compat.py  setup_dialog.py  steam_api.py  steam_guard.py  steam_protobuf.py  steam_protobuf_login.py  steam_web_api.py  ui.py
