[project]
name = "steam-authenticator-linux"
version = "0.1.0"
description = "A modern Steam Authenticator for Linux with 2FA and trade confirmations"
requires-python = ">=3.10"
dependencies = [
    "PyGObject>=3.42.0",
    "requests>=2.31.0",
    "cryptography>=41.0.0",
    "aiohttp>=3.9.0",
    "qrcode[pil]>=7.4.0",
    "Pillow>=10.0.0",
]

[project.scripts]
steam-authenticator = "steam_authenticator.main:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["steam_authenticator"]
package-dir = {"steam_authenticator" = "src"}