[project]
name = "steam-authenticator-linux"
version = "1.0.0"
description = "A modern Steam Authenticator for Linux with 2FA and trade confirmations"
requires-python = ">=3.10"
dependencies = [
    "PyGObject>=3.42.0",
    "cryptography>=41.0.0",
    "aiohttp>=3.9.0",
    "qrcode[pil]>=7.4.0",
    "Pillow>=10.0.0",
]

[build-system]
requires = ["setuptools>=70.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"